# hackutd24

./: .gitignore  README.md  package-lock.json
backend/: .gitignore  audio_streaming.py  main.py  processor.py  pyproject.toml  requirements.txt  transcription.py
backend/templates/: index.html
computer-mics/: audio_client.py  requirements.txt  transcription_handler.py  websocket.py
embedded/: audio_streaming.cpp  main.cpp  mic.c  mic_test.cpp  triangulation.cpp  websocket_audio.cpp
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  Appbackup.jsx  sandeepApp.jsx  socket.js
frontend/src/components/: AudioVisualizer.jsx  Test.jsx
