[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "faster-whisper>=1.0.3",
    "prompt-toolkit>=3.0.48",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "python-socketio[asyncio-client]>=5.11.4",
    "sounddevice>=0.5.1",
    "soundfile>=0.12.1",
]
